# sliced

./: Cargo.toml  README.md  profile.json
benches/: benches.rs
src/: lib.rs  slicedslab.rs  slicedvec.rs  varslicedvec.rs
