[package]
name = "vecvec"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A segmented vector for iterating over slices"
keywords = ["vector", "slice", "chunk"]
categories = ["data-structures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "benches"
harness = false
